--- a/Resume_Analysis.ipynb
+++ b/Resume_Analysis.ipynb
@@ -1733,7 +1733,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ph. No.: +919874051938  E-mail: bidishaadhikari2015@gmail.com  LinkedIn Profile: linkedin.com/in/bidisha-adhikari-53273621a  Kulgachia, Howrah  West Bengal -711306  Bidisha Adhikari    Career Objective:   Currently studying in M.Sc. in IT (Data Science) 4th semester and seeking for an opportunity to explore and  utilize my good knowledge in    Machine Learning algorithm   Data Visualization techniques using python   Coding skills   Data Science   Exploratory Data Analysis  Technical Skills:   Programming Languages – C, Java, Python   Web Technologies – HTML, SQL, MongoDB, Cassandra    Academic Details:  Program  Institute  Board/ University  Marks  Year of Passing  M.Sc. in IT(Data  Science)  Maulana Abul  Kalam Azad  University Of  Technology, West  Bengal(In-House)  Maulana Abul  Kalam Azad  University Of  Technology, West  Bengal    9.47 YGPA(1st  year)  Due To Appear  B.Sc. in Computer  Science(H)  Panskura  Banamali College  Vidyasagar  University, West  Bengal  7.06 CGPA  2020  Higher Secondary  Bagnan Adarsha  Balika Vidyalaya  WBCHSE  67.8%  2017  Madhyamik  Bagnan Adarsha  Balika Vidyalaya  WBBSE  80.28%  2015    Academic Projects:   University Data Analysis    Currently working in University Data Analysis (team of 14) in our university, MAKAUT. This project is  about applying data science on university’s (MAKAUT) student’s data (e.g. admission, examination,  placement, extracurricular etc.) from all courses (B.Tech, B.Sc, M.Sc, M.Tech etc.).     Credit Card Fraud Detection  Currently working on Credit Card Fraud Detection using Data Science as final semester academic  project. To tackle this highly unbalanced class distribution, I implemented a data level approach which  includes various resampling techniques namely, under sampling, over sampling and (SMOTE). By  comparing all the three methods, found that random forest classifier and decision tree with both over  sampling and SMOTE is better than the other predictive models.   Movie Recommendation System                   As part of M.Sc. 2nd semester machine learning project, I implemented Movie Recommendation  System project using demographic, content-based, collaborative filtering in python.    Trainings & Workshops:   Six weeks Python training & certification from IBM on EdX  Extra-curricular Activities:   Singing   Painting   Communication Languages:  Bengali, English, Hindi  Personal Details:  Father’s Name: Tapan  Adhikari  Date of Birth: 05.07.1999      \n"
+      "Ph. No.: +919874000000  E-mail: abc@gmail.com  LinkedIn Profile: linkedin.com/in/bidisha-adhikari-53273621a  Kulgachia, Howrah  West Bengal -711306  Bidisha Adhikari    Career Objective:   Currently studying in M.Sc. in IT (Data Science) 4th semester and seeking for an opportunity to explore and  utilize my good knowledge in    Machine Learning algorithm   Data Visualization techniques using python   Coding skills   Data Science   Exploratory Data Analysis  Technical Skills:   Programming Languages – C, Java, Python   Web Technologies – HTML, SQL, MongoDB, Cassandra    Academic Details:  Program  Institute  Board/ University  Marks  Year of Passing  M.Sc. in IT(Data  Science)  Maulana Abul  Kalam Azad  University Of  Technology, West  Bengal(In-House)  Maulana Abul  Kalam Azad  University Of  Technology, West  Bengal    9.47 YGPA(1st  year)  Due To Appear  B.Sc. in Computer  Science(H)  Panskura  Banamali College  Vidyasagar  University, West  Bengal  7.06 CGPA  2020  Higher Secondary  Bagnan Adarsha  Balika Vidyalaya  WBCHSE  67.8%  2017  Madhyamik  Bagnan Adarsha  Balika Vidyalaya  WBBSE  80.28%  2015    Academic Projects:   University Data Analysis    Currently working in University Data Analysis (team of 14) in our university, MAKAUT. This project is  about applying data science on university’s (MAKAUT) student’s data (e.g. admission, examination,  placement, extracurricular etc.) from all courses (B.Tech, B.Sc, M.Sc, M.Tech etc.).     Credit Card Fraud Detection  Currently working on Credit Card Fraud Detection using Data Science as final semester academic  project. To tackle this highly unbalanced class distribution, I implemented a data level approach which  includes various resampling techniques namely, under sampling, over sampling and (SMOTE). By  comparing all the three methods, found that random forest classifier and decision tree with both over  sampling and SMOTE is better than the other predictive models.   Movie Recommendation System                   As part of M.Sc. 2nd semester machine learning project, I implemented Movie Recommendation  System project using demographic, content-based, collaborative filtering in python.    Trainings & Workshops:   Six weeks Python training & certification from IBM on EdX  Extra-curricular Activities:   Singing   Painting   Communication Languages:  Bengali, English, Hindi  Personal Details:  Father’s Name: Tapan  Adhikari  Date of Birth: 05.07.1999      \n"
      ]
     }
    ],
@@ -1761,12 +1761,12 @@
       "text/html": [
        "<span class=\"tex2jax_ignore\"><div class=\"entities\" style=\"line-height: 2.5; direction: ltr\">Ph. No.: \n",
        "<mark class=\"entity\" style=\"background: #674ea7; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    +919874051938\n",
+       "    +919874000000\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PHONE NUMBER</span>\n",
        "</mark>\n",
        "  E-mail: \n",
        "<mark class=\"entity\" style=\"background: #f9cb9c; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
-       "    bidishaadhikari2015@gmail.com\n",
+       "    abc@gmail.com\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">EMAIL</span>\n",
        "</mark>\n",
        "  LinkedIn Profile: \n",
@@ -2024,7 +2024,7 @@
        "    Tapan\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">PERSON</span>\n",
        "</mark>\n",
-       "  Adhikari  Date of Birth: 05.07.1999      </div></span>"
+       "  Adhikari  Date of Birth: 07.09.1999      </div></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -2053,8 +2053,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "PHONE NUMBER                  - +919874051938\n",
-      "EMAIL                         - bidishaadhikari2015@gmail.com\n",
+      "PHONE NUMBER                  - +919874000000\n",
+      "EMAIL                         - abc@gmail.com\n",
       "PORTFOLIO                     - linkedin.com/in/bidisha-adhikari-53273621a\n",
       "PERSON                        - Howrah  West Bengal\n",
       "PERSON                        - Bidisha Adhikari\n",
@@ -2119,7 +2119,7 @@
       "WORK_OF_ART                   -  Singing   Painting   Communication Languages:  Bengali\n",
       "LANGUAGE                      - English\n",
       "PERSON                        - Tapan\n",
-      "CARDINAL                      - 05.07.1999\n"
+      "CARDINAL                      - 07.09.1999\n"
      ]
     }
    ],
